# cmd/api/auth.go
@@ -8,6 +8,7 @@ import (
 	// "fmt"
 	"net/http"
 
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 	// "github.com/wlady3190/go-social/internal/mailer"
 	"github.com/wlady3190/go-social/internal/store"
@@ -122,6 +123,11 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 }
 
+type CreateUserTokenPayload struct {
+	Email    string `json:"email" validated:"required,email,max=255"`
+	Password string `json:"password" validated:"required,min=3,max=72"`
+}
+
 // createTokenHandler godoc
 //
 //	@Summary		Creates a token
@@ -135,7 +141,53 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 //	@Failure		401		{object}	error
 //	@Failure		500		{object}	error
 //	@Router			/authentication/token [post]
-
 func (app *application) createTokenHandler(w http.ResponseWriter, r *http.Request) {
+	//parse payload credentials
+
+	var payload CreateUserTokenPayload
+	if err := readJSON(w, r, &payload); err != nil {
+		app.badRequestReponse(w, r, err)
+		return
+	}
+
+	if err := Validate.Struct(payload); err != nil {
+		app.badRequestReponse(w, r, err)
+		return
+	}
+	//fetch the user (check is ufser exists) from the payload
+
+	user, err := app.store.Users.GetByEmail(r.Context(), payload.Email)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			//! ****NUnca colocar un error 404 xq sabrá q no existe un mail**
+			app.unathorizedErrorResponse(w, r, err)
+
+		default:
+			app.internalServerError(w, r, err)
+
+		}
+		return
+	}
+	// generate the token -> add claims
+	claims := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(app.config.auth.token.exp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": app.config.auth.token.iss,
+		"aud": app.config.auth.token.iss,
+	}
+	token, err := app.authenticator.GenerateToken(claims)
+
+	if err != nil {
+		app.internalServerError(w, r, err)
+	}
+
+	//send it to the client
+
+	if err := app.jsonResponse(w, http.StatusCreated, token); err != nil {
+		app.internalServerError(w, r, err)
+	}
 
 }
